--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,178 @@
-h1 {
+body {
+    display: flex;
+    margin: 30px auto;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
     text-align: center;
-    color:  purple;
-} 
+}
+
+.container-fluid {
+    margin: 40px;
+    background: rgb(255, 255, 255);
+    width: 700px;
+    padding-left: calc(var(--bs-gutter-x) * 0);
+    border-radius: 10px;
+}
+
+h1 {
+    color: white;
+}
+
+.card-body {
+    box-sizing: content-box;
+    max-width: none;
+    padding: 40px 45px;
+
+}
+
+.main-card {
+    display: flex;
+    background-color: #0aa0f6;
+    max-width: 100%;
+    min-width: 100%;
+    border-radius: 40px;
+}
+
+input {
+    width: 70%;
+    display: inline-block;
+    border: 1px solid white;
+    border-radius: 30px;
+    margin: 0 auto;
+    margin-bottom: 20px;
+    font-size: x-small;
+    padding: 1px;
+}
+
+.submit-button {
+    display: inline-block;
+    font-size: xx-small;
+    color: slategray;
+    border: white;
+    background-color: white;
+    border: 1px solid white;
+    border-radius: 30px;
+    transform: 120ms ease-in-out;
+}
+
+.big-sun {
+    display: inline;
+    margin: 22px 5px 5px;
+    font-size: 75px;
+    background: transparent;
+    max-width: none;
+    padding: 1px;
+}
+
+.city-name {
+    text-align: left;
+    display: inline;
+    margin-top: 20px;
+    max-width: 100%;
+    padding: 4px;
+}
+
+.city-name h1 {
+    font-size: x-large;
+    margin: 5px 0px 0px;
+}
+
+.city-name h2 {
+    font-size: x-small;
+    margin-bottom: 2px;
+}
+
+.city-name p {
+    font-size: x-small;
+}
+
+.current-date {
+    font-size: x-small;
+}
+
+.right-side-text {
+    display: inline;
+    text-align: left;
+    padding: 10px 0;
+    font-size: xxx-large;
+}
+
+.right-side-text p {
+    font-size: x-small;
+}
+
+.right-side-text-f {
+    font-size: medium;
+    position: relative;
+    bottom: 20px;
+    left: -4px;
+    transition: all 120ms ease-in;
+}
+
+.right-side-text-f:hover {
+    background-color: white;
+    color: #0aa0f6;
+    cursor: pointer;
+}
+
+.right-side-text-c {
+    font-size: medium;
+    position: relative;
+    bottom: 20px;
+    left: -4px;
+    transition: all 120ms ease-in;
+}
+
+.right-side-text-c:hover {
+    background-color: white;
+    color: #0aa0f6;
+    cursor: pointer;
+}
+
+.right-side-text-middle-sign {
+    font-size: medium;
+    position: relative;
+    bottom: 20px;
+    left: -4px;
+}
+
+.weekday-card-row {
+    padding: 20px;
+}
+
+.weekday-card-body {
+    display: flex;
+}
+
+.weekday-cards {
+    background-color: transparent;
+    display: inline-block;
+    margin: auto;
+    border: 0px solid transparent;
+}
+
+.weekday-sun {
+    display: block;
+    margin: auto 0;
+    right: auto;
+    font-size: large;
+    margin: 5px auto -10px;
+}
+
+.fa-cloud-sun-rain {
+    color: gray;
+
+}
+
+.weekday-text {
+    margin: 20px auto 5px;
+    text-align: center;
+    font-size: small;
+
+}
+
+.weekday-f-degrees {
+    margin: 20px auto 5px;
+    text-align: center;
+    font-size: xx-small;
+}
