Added attribution and source code link to GitHub
Customized CSS - class names: attribution & open-source-code

--- a/src/style.css
+++ b/src/style.css
@@ -176,3 +176,15 @@ input {
     text-align: center;
     font-size: xx-small;
 }
+
+.attribution {
+    text-align: center;
+    margin: auto;
+    font-size: x-small;
+    font-family: 'Courier New', Courier, monospace;
+}
+.open-source-code {
+    color: white;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: x-small;
+}
