--- a/src/style.css
+++ b/src/style.css
@@ -7,10 +7,9 @@ body {
 }
 
 .container-fluid {
-    margin: 40px;
+    margin: 0 auto;
     background: rgb(255, 255, 255);
     width: 700px;
-    padding-left: calc(var(--bs-gutter-x) * 0);
     border-radius: 10px;
 }
 
@@ -18,10 +17,9 @@ h1 {
     color: white;
 }
 
+
 .card-body {
-    box-sizing: content-box;
-    max-width: none;
-    padding: 35px 0px;
+    padding: 5px;
 
 }
 
@@ -29,8 +27,9 @@ h1 {
     display: flex;
     background-color: #0aa0f6;
     max-width: 500px;
-    min-width: 450px;
+    min-width: 500px;
     border-radius: 40px;
+    margin: 0 auto;
 }
 
 input {
@@ -42,6 +41,10 @@ input {
     margin-bottom: 20px;
     font-size: x-small;
     padding: 1px;
+}
+
+.search-box {
+    margin-top: 20px;
 }
 
 .submit-button {
@@ -56,8 +59,8 @@ input {
 }
 
 .big-sun {
-    display: inline;
-    margin: 22px 5px 5px;
+    display: inline-block;
+    margin: auto;
     font-size: 75px;
     background: transparent;
     padding: 1px;
@@ -136,7 +139,7 @@ input {
 }
 
 .weekday-card-row {
-    padding: 20px;
+    padding: 10px;
 }
 
 .weekday-card-body {
@@ -146,9 +149,10 @@ input {
 
 .weekday-cards {
     background-color: transparent;
-    display: inline-block;
+    display: block;
     margin: auto;
     border: 0px solid transparent;
+    padding: 0;
 }
 
 .weekday-sun {
@@ -180,6 +184,7 @@ input {
 .attribution {
     text-align: center;
     margin: auto;
+    padding: 5px;
     font-size: x-small;
     font-family: 'Courier New', Courier, monospace;
 }
