Added weather-description class to html, css: text-transform: cap, updated JS to weather description

--- a/src/style.css
+++ b/src/style.css
@@ -90,6 +90,10 @@ input {
     font-size: x-small;
 }
 
+.weather-description {
+    text-transform: capitalize;
+}
+
 .weather-temp {
     display: inline;
     text-align: left;
