--- a/src/style.css
+++ b/src/style.css
@@ -56,12 +56,16 @@ input {
     transform: 120ms ease-in-out;
 }
 
-.big-icon {
-    display: inline-block;
+.big-icon img{
+    position:relative;
+    bottom: 15px;
+    right: 5px;
     margin: auto;
-    font-size: 75px;
+    width: 170px;
+    height: 170px;
     background: transparent;
-    padding: 1px;
+
+  
 }
 
 .city-name {
